--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ff64ddaa;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #ff64ddaa;
 }
 
 body {
@@ -43,25 +43,31 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+ /* background-color: #1a1a1a;*/
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ff64ddaa;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+.question-text {
+  font-size: x-large;
+}
+.score-section {
+  font-size: x-large;
+  background-color: greenyellow;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #ff64ddaa;
   }
   button {
     background-color: #f9f9f9;
