added title and my css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,7 +43,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
- /* background-color: #1a1a1a;*/
+  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -61,6 +61,10 @@ button:focus-visible {
   font-size: x-large;
   background-color: greenyellow;
 }
+.question-count {
+  background-color: greenyellow;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
